--- a/styles.css
+++ b/styles.css
@@ -75,35 +75,124 @@ body {
 .floating-emoji {
     position: absolute;
     font-size: 25px;
-    animation: emojiFloat 5s ease-in-out infinite;
     opacity: 0.7;
 }
 
-/* Позиции для плавающих эмодзи - цветы (избегаем центра экрана) */
-.floating-emoji:nth-child(12) { top: 5%; left: 10%; animation-delay: 0s; }
-.floating-emoji:nth-child(13) { top: 8%; left: 90%; animation-delay: 1s; }
-.floating-emoji:nth-child(14) { top: 80%; left: 8%; animation-delay: 2s; }
-.floating-emoji:nth-child(15) { top: 88%; left: 88%; animation-delay: 3s; }
-.floating-emoji:nth-child(16) { top: 25%; left: 5%; animation-delay: 4s; }
-.floating-emoji:nth-child(17) { top: 85%; left: 70%; animation-delay: 0.5s; }
+/* Хаотичные позиции и анимации эмодзи (избегаем текст в центре) */
+.floating-emoji:nth-child(12) { 
+    top: 5%; 
+    left: 10%; 
+    animation: emojiFloatCrazy1 9s ease-in-out infinite;
+    animation-delay: 0s; 
+}
+.floating-emoji:nth-child(13) { 
+    top: 8%; 
+    left: 90%; 
+    animation: emojiFloatCrazy2 7s ease-in-out infinite reverse;
+    animation-delay: 1s; 
+}
+.floating-emoji:nth-child(14) { 
+    top: 80%; 
+    left: 8%; 
+    animation: emojiFloatCrazy3 11s ease-in-out infinite;
+    animation-delay: 2s; 
+}
+.floating-emoji:nth-child(15) { 
+    top: 88%; 
+    left: 88%; 
+    animation: emojiFloatCrazy4 6s ease-in-out infinite reverse;
+    animation-delay: 3s; 
+}
+.floating-emoji:nth-child(16) { 
+    top: 25%; 
+    left: 5%; 
+    animation: emojiFloatCrazy2 10s ease-in-out infinite;
+    animation-delay: 4s; 
+}
+.floating-emoji:nth-child(17) { 
+    top: 85%; 
+    left: 70%; 
+    animation: emojiFloatCrazy1 8s ease-in-out infinite reverse;
+    animation-delay: 0.5s; 
+}
 
 /* Позиции для плавающих эмодзи - животные (углы и края) */
-.floating-emoji:nth-child(18) { top: 12%; left: 75%; animation-delay: 1.5s; }
-.floating-emoji:nth-child(19) { top: 88%; left: 20%; animation-delay: 2.5s; }
-.floating-emoji:nth-child(20) { top: 18%; left: 85%; animation-delay: 3.5s; }
-.floating-emoji:nth-child(21) { top: 70%; left: 12%; animation-delay: 4.5s; }
+.floating-emoji:nth-child(18) { 
+    top: 12%; 
+    left: 75%; 
+    animation: emojiFloatCrazy3 7s ease-in-out infinite reverse;
+    animation-delay: 1.5s; 
+}
+.floating-emoji:nth-child(19) { 
+    top: 88%; 
+    left: 20%; 
+    animation: emojiFloatCrazy4 9s ease-in-out infinite;
+    animation-delay: 2.5s; 
+}
+.floating-emoji:nth-child(20) { 
+    top: 18%; 
+    left: 85%; 
+    animation: emojiFloatCrazy2 8s ease-in-out infinite reverse;
+    animation-delay: 3.5s; 
+}
+.floating-emoji:nth-child(21) { 
+    top: 70%; 
+    left: 12%; 
+    animation: emojiFloatCrazy1 10s ease-in-out infinite;
+    animation-delay: 4.5s; 
+}
 
 /* Позиции для плавающих эмодзи - звезды (края) */
-.floating-emoji:nth-child(22) { top: 6%; left: 68%; animation-delay: 1.8s; }
-.floating-emoji:nth-child(23) { top: 38%; left: 92%; animation-delay: 2.8s; }
-.floating-emoji:nth-child(24) { top: 78%; left: 8%; animation-delay: 0.8s; }
-.floating-emoji:nth-child(25) { top: 48%; left: 5%; animation-delay: 3.8s; }
+.floating-emoji:nth-child(22) { 
+    top: 6%; 
+    left: 68%; 
+    animation: emojiFloatCrazy3 6s ease-in-out infinite reverse;
+    animation-delay: 1.8s; 
+}
+.floating-emoji:nth-child(23) { 
+    top: 38%; 
+    left: 92%; 
+    animation: emojiFloatCrazy4 8s ease-in-out infinite;
+    animation-delay: 2.8s; 
+}
+.floating-emoji:nth-child(24) { 
+    top: 78%; 
+    left: 8%; 
+    animation: emojiFloatCrazy2 11s ease-in-out infinite reverse;
+    animation-delay: 0.8s; 
+}
+.floating-emoji:nth-child(25) { 
+    top: 48%; 
+    left: 5%; 
+    animation: emojiFloatCrazy1 7s ease-in-out infinite;
+    animation-delay: 3.8s; 
+}
 
 /* Позиции для плавающих эмодзи - сладости (углы) */
-.floating-emoji:nth-child(26) { top: 35%; left: 95%; animation-delay: 1.2s; }
-.floating-emoji:nth-child(27) { top: 90%; left: 88%; animation-delay: 2.2s; }
-.floating-emoji:nth-child(28) { top: 42%; left: 12%; animation-delay: 3.2s; }
-.floating-emoji:nth-child(29) { top: 8%; left: 28%; animation-delay: 1.7s; }
+.floating-emoji:nth-child(26) { 
+    top: 35%; 
+    left: 95%; 
+    animation: emojiFloatCrazy4 9s ease-in-out infinite reverse;
+    animation-delay: 1.2s; 
+}
+.floating-emoji:nth-child(27) { 
+    top: 90%; 
+    left: 88%; 
+    animation: emojiFloatCrazy3 6s ease-in-out infinite;
+    animation-delay: 2.2s; 
+}
+.floating-emoji:nth-child(28) { 
+    top: 42%; 
+    left: 12%; 
+    animation: emojiFloatCrazy2 10s ease-in-out infinite reverse;
+    animation-delay: 3.2s; 
+}
+.floating-emoji:nth-child(29) { 
+    top: 8%; 
+    left: 28%; 
+    animation: emojiFloatCrazy1 8s ease-in-out infinite;
+    animation-delay: 1.7s; 
+}
 
 /* Всплывающие фото */
 .floating-photo {
@@ -207,27 +296,104 @@ body {
     }
 }
 
-/* Анимация плавающих эмодзи */
-@keyframes emojiFloat {
+/* Супер хаотичная анимация для эмодзи */
+@keyframes emojiFloatCrazy1 {
     0% { 
-        transform: translateY(0px) rotate(0deg) scale(1); 
+        transform: translate(0, 0) scale(1) rotate(0deg); 
         opacity: 0.6; 
     }
-    25% { 
-        transform: translateY(-8px) rotate(5deg) scale(1.1); 
+    16% { 
+        transform: translate(85px, -45px) scale(1.4) rotate(60deg); 
+        opacity: 0.9; 
+    }
+    33% { 
+        transform: translate(-35px, -70px) scale(0.7) rotate(120deg); 
         opacity: 0.8; 
     }
     50% { 
-        transform: translateY(-15px) rotate(-3deg) scale(0.9); 
+        transform: translate(120px, 25px) scale(1.6) rotate(180deg); 
+        opacity: 0.7; 
+    }
+    66% { 
+        transform: translate(-60px, 55px) scale(0.5) rotate(240deg); 
+        opacity: 0.9; 
+    }
+    83% { 
+        transform: translate(45px, -35px) scale(1.3) rotate(300deg); 
+        opacity: 0.8; 
+    }
+    100% { 
+        transform: translate(0, 0) scale(1) rotate(360deg); 
+        opacity: 0.6; 
+    }
+}
+
+@keyframes emojiFloatCrazy2 {
+    0% { 
+        transform: `translate(0, 0) scale(1) rotate(0deg); 
+        opacity: 0.7; 
+    }
+    20% { 
+        transform: translate(-95px, 60px) scale(0.6) rotate(-45deg); 
+        opacity: 0.5; 
+    }
+    40% { 
+        transform: translate(70px, -80px) scale(1.8) rotate(-90deg); 
+        opacity: 0.9; 
+    }
+    60% { 
+        transform: translate(-50px, -65px) scale(0.4) rotate(-135deg); 
+        opacity: 0.8; 
+    }
+    80% { 
+        transform: translate(110px, 75px) scale(1.5) rotate(-180deg); 
+        opacity: 0.6; 
+    }
+    100% { 
+        transform: translate(0, 0) scale(1) rotate(-225deg); 
+        opacity: 0.7; 
+    }
+}
+
+@keyframes emojiFloatCrazy3 {
+    0% { 
+        transform: translate(0, 0) scale(1) rotate(0deg); 
+        opacity: 0.8; 
+    }
+    25% { 
+        transform: translate(130px, -55px) scale(1.9) rotate(90deg); 
+        opacity: 0.6; 
+    }
+    50% { 
+        transform: translate(-75px, 95px) scale(0.3) rotate(180deg); 
         opacity: 0.9; 
     }
     75% { 
-        transform: translateY(-5px) rotate(3deg) scale(1.05); 
-        opacity: 0.7; 
+        transform: translate(-65px, -125px) scale(2.0) rotate(270deg); 
+        opacity: 0.5; 
     }
     100% { 
-        transform: translateY(0px) rotate(0deg) scale(1); 
-        opacity: 0.6; 
+        transform: translate(0, 0) scale(1) rotate(360deg); 
+        opacity: 0.8; 
+    }
+}
+
+@keyframes emojiFloatCrazy4 {
+    0% { 
+        transform: translate(0, 0) scale(1) rotate(0deg); 
+        opacity: 0.5; 
+    }
+    33% { 
+        transform: translate(-105px, -40px) scale(0.2) rotate(-60deg); 
+        opacity: 0.8; 
+    }
+    66% { 
+        transform: translate(80px, 115px) scale(1.7) rotate(-120deg); 
+        opacity: 0.9; 
+    }
+    100% { 
+        transform: translate(0, 0) scale(1) rotate(-180deg); 
+        opacity: 0.5; 
     }
 }
 
